Actualizando traducción C-API a 3.9
- Arreglando párrafos que necesitaban atención.
- Actualizando las entradas luego de la actualización.
- Traduciendo archivos nuevos agregados en 3.9
- Agregando diccionarios

--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-21 18:38+0200\n"
+"PO-Revision-Date: 2021-08-01 20:16+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/exceptions.rst:8
 msgid "Exception Handling"
@@ -583,7 +584,7 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:377
 msgid "The caller must hold the GIL."
-msgstr ""
+msgstr "La persona que llama debe retener el GIL."
 
 #: ../Doc/c-api/exceptions.rst:381
 msgid ""
@@ -974,13 +975,15 @@ msgstr ""
 
 #: ../Doc/c-api/exceptions.rst:640 ../Doc/c-api/exceptions.rst:650
 msgid "3.11"
-msgstr ""
+msgstr "3.11"
 
 #: ../Doc/c-api/exceptions.rst:642
 msgid ""
 "``Py_UNICODE`` is deprecated since Python 3.3. Please migrate to "
 "``PyObject_CallFunction(PyExc_UnicodeEncodeError, \"sOnns\", ...)``."
 msgstr ""
+"``Py_UNICODE`` está obsoleto desde Python 3.3. Migre por favor a "
+"``PyObject_CallFunction(PyExc_UnicodeEncodeError, \"sOnns\", ...)``."
 
 #: ../Doc/c-api/exceptions.rst:647
 msgid ""
@@ -996,10 +999,12 @@ msgid ""
 "``Py_UNICODE`` is deprecated since Python 3.3. Please migrate to "
 "``PyObject_CallFunction(PyExc_UnicodeTranslateError, \"Onns\", ...)``."
 msgstr ""
+"``Py_UNICODE`` está obsoleto desde Python 3.3. Migre por favor a "
+"``PyObject_CallFunction(PyExc_UnicodeTranslateError, \"sOnns\", ...)``."
 
 #: ../Doc/c-api/exceptions.rst:658
 msgid "Return the *encoding* attribute of the given exception object."
-msgstr "retorna el atributo *encoding* del objeto de excepción dado."
+msgstr "Retorna el atributo *encoding* del objeto de excepción dado."
 
 #: ../Doc/c-api/exceptions.rst:664
 msgid "Return the *object* attribute of the given exception object."
@@ -1058,7 +1063,6 @@ msgid "Recursion Control"
 msgstr "Control de Recursión"
 
 #: ../Doc/c-api/exceptions.rst:715
-#, fuzzy
 msgid ""
 "These two functions provide a way to perform safe recursive calls at the C "
 "level, both in the core and in extension modules.  They are needed if the "
@@ -1070,7 +1074,9 @@ msgstr ""
 "Estas dos funciones proporcionan una forma de realizar llamadas recursivas "
 "seguras en el nivel C, tanto en el núcleo como en los módulos de extensión. "
 "Son necesarios si el código recursivo no invoca necesariamente el código "
-"Python (que rastrea su profundidad de recursión automáticamente)."
+"Python (que rastrea su profundidad de recursión automáticamente). Tampoco "
+"son necesarios para las implementaciones de *tp_call* porque :ref:`call "
+"protocol <call>` se encarga del manejo de la recursividad."
 
 #: ../Doc/c-api/exceptions.rst:724
 msgid "Marks a point where a recursive C-level call is about to be performed."
@@ -1099,19 +1105,18 @@ msgstr ""
 "cero. De lo contrario, se retorna cero."
 
 #: ../Doc/c-api/exceptions.rst:734
-#, fuzzy
 msgid ""
 "*where* should be a UTF-8 encoded string such as ``\" in instance check\"`` "
 "to be concatenated to the :exc:`RecursionError` message caused by the "
 "recursion depth limit."
 msgstr ""
-"*where* debería ser una cadena como ``\"en la comprobación de instancia\"`` "
-"para concatenarse con el mensaje :exc:`RecursionError` causado por el límite "
-"de profundidad de recursión."
+"*where* debería ser una cadena de caracteres codificada en UTF-8 como ``\"en "
+"la comprobación de instancia\"`` para concatenarse con el mensaje :exc:"
+"`RecursionError` causado por el límite de profundidad de recursión."
 
 #: ../Doc/c-api/exceptions.rst:738 ../Doc/c-api/exceptions.rst:746
 msgid "This function is now also available in the limited API."
-msgstr ""
+msgstr "Esta función ahora también está disponible en la API limitada."
 
 #: ../Doc/c-api/exceptions.rst:743
 msgid ""
@@ -1188,7 +1193,6 @@ msgid "Standard Exceptions"
 msgstr "Excepciones Estándar"
 
 #: ../Doc/c-api/exceptions.rst:784
-#, fuzzy
 msgid ""
 "All standard Python exceptions are available as global variables whose names "
 "are ``PyExc_`` followed by the Python exception name.  These have the type :"
@@ -1197,7 +1201,7 @@ msgid ""
 msgstr ""
 "Todas las excepciones estándar de Python están disponibles como variables "
 "globales cuyos nombres son ``PyExc_`` seguidos del nombre de excepción de "
-"Python. Estos tienen el tipo :c:type:`PyObject\\*`; Todos son objetos de "
+"Python. Estos tienen el tipo :c:type:`PyObject*`; todos son objetos de "
 "clase. Para completar, aquí están todas las variables:"
 
 #: ../Doc/c-api/exceptions.rst:845 ../Doc/c-api/exceptions.rst:978
@@ -1721,7 +1725,6 @@ msgid "Standard Warning Categories"
 msgstr "Categorías de advertencia estándar"
 
 #: ../Doc/c-api/exceptions.rst:1004
-#, fuzzy
 msgid ""
 "All standard Python warning categories are available as global variables "
 "whose names are ``PyExc_`` followed by the Python exception name. These have "
@@ -1730,7 +1733,7 @@ msgid ""
 msgstr ""
 "Todas las categorías de advertencia estándar de Python están disponibles "
 "como variables globales cuyos nombres son ``PyExc_`` seguidos del nombre de "
-"excepción de Python. Estos tienen el tipo :c:type:`PyObject\\*`; Todos son "
+"excepción de Python. Estos tienen el tipo :c:type:`PyObject*`; todos son "
 "objetos de clase. Para completar, aquí están todas las variables:"
 
 #: ../Doc/c-api/exceptions.rst:1025
