--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-18 14:17+0200\n"
+"PO-Revision-Date: 2021-08-02 01:28+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/intro.rst:8
 msgid "Introduction"
@@ -235,6 +236,11 @@ msgid ""
 "possible values are covered in ``case`` statements.  Use this in places "
 "where you might be tempted to put an ``assert(0)`` or ``abort()`` call."
 msgstr ""
+"Use esto cuando tenga una ruta de código a la que no se pueda acceder por "
+"diseño. Por ejemplo, en la cláusula ``default:`` en una declaración "
+"``switch`` para la cual todos los valores posibles están cubiertos en "
+"declaraciones ``case``. Use esto en lugares donde podría tener la tentación "
+"de poner una llamada ``assert (0)`` o ``abort()``."
 
 #: ../Doc/c-api/intro.rst:115
 msgid ""
@@ -242,12 +248,18 @@ msgid ""
 "avoids a warning about unreachable code.  For example, the macro is "
 "implemented with ``__builtin_unreachable()`` on GCC in release mode."
 msgstr ""
+"En el modo de lanzamiento, la macro ayuda al compilador a optimizar el "
+"código y evita una advertencia sobre el código inalcanzable. Por ejemplo, la "
+"macro se implementa con ``__builtin_unreachable()`` en GCC en modo de "
+"lanzamiento."
 
 #: ../Doc/c-api/intro.rst:119
 msgid ""
 "A use for ``Py_UNREACHABLE()`` is following a call a function that never "
 "returns but that is not declared :c:macro:`_Py_NO_RETURN`."
 msgstr ""
+"Un uso de ``Py_UNREACHABLE()`` es seguir una llamada a una función que nunca "
+"retorna pero que no está declarada :c:macro:`_Py_NO_RETURN`."
 
 #: ../Doc/c-api/intro.rst:122
 msgid ""
@@ -257,6 +269,12 @@ msgid ""
 "case, it's better to report the error to the caller.  If the error cannot be "
 "reported to caller, :c:func:`Py_FatalError` can be used."
 msgstr ""
+"Si una ruta de código es un código muy poco probable pero se puede acceder "
+"en casos excepcionales, esta macro no debe utilizarse. Por ejemplo, en "
+"condiciones de poca memoria o si una llamada al sistema devuelve un valor "
+"fuera del rango esperado. En este caso, es mejor informar el error a la "
+"persona que llama. Si no se puede informar del error a la persona que llama, "
+"se puede utilizar :c:func:`Py_FatalError`."
 
 #: ../Doc/c-api/intro.rst:132
 msgid "Return the absolute value of ``x``."
@@ -361,7 +379,6 @@ msgid "Objects, Types and Reference Counts"
 msgstr "Objetos, Tipos y Conteos de Referencias"
 
 #: ../Doc/c-api/intro.rst:231
-#, fuzzy
 msgid ""
 "Most Python/C API functions have one or more arguments as well as a return "
 "value of type :c:type:`PyObject*`.  This type is a pointer to an opaque data "
@@ -376,7 +393,7 @@ msgid ""
 "objects."
 msgstr ""
 "La mayoría de las funciones de Python/C API tienen uno o más argumentos, así "
-"como un valor de retorno de tipo :c:type:`PyObject\\*`. Este tipo es un "
+"como un valor de retorno de tipo :c:type:`PyObject*`. Este tipo es un "
 "puntero a un tipo de datos opaco que representa un objeto arbitrario de "
 "Python. Dado que todos los tipos de objetos Python son tratados de la misma "
 "manera por el lenguaje Python en la mayoría de las situaciones (por ejemplo, "
@@ -384,7 +401,7 @@ msgstr ""
 "estén representados por un solo tipo C. Casi todos los objetos de Python "
 "viven en el montículo (*heap*): nunca declaras una variable automática o "
 "estática de tipo :c:type:`PyObject`, solo se pueden declarar variables de "
-"puntero de tipo :c:type:`PyObject\\*`. La única excepción son los objetos "
+"puntero de tipo :c:type:`PyObject*`. La única excepción son los objetos "
 "tipo; como nunca deben desasignarse, son típicamente objetos estáticos :c:"
 "type:`PyTypeObject`."
 
@@ -728,7 +745,6 @@ msgid "Types"
 msgstr "Tipos"
 
 #: ../Doc/c-api/intro.rst:497
-#, fuzzy
 msgid ""
 "There are few other data types that play a significant role in  the Python/C "
 "API; most are simple C types such as :c:type:`int`,  :c:type:`long`, :c:type:"
@@ -740,7 +756,7 @@ msgid ""
 msgstr ""
 "Hay algunos otros tipos de datos que juegan un papel importante en la API de "
 "Python/C; la mayoría son tipos C simples como :c:type:`int`, :c:type:"
-"`long`, :c:type:`double` y :c:type:`char\\*`. Algunos tipos de estructura se "
+"`long`, :c:type:`double` y :c:type:`char*`. Algunos tipos de estructura se "
 "usan para describir tablas estáticas que se usan para enumerar las funciones "
 "exportadas por un módulo o los atributos de datos de un nuevo tipo de "
 "objeto, y otro se usa para describir el valor de un número complejo. Estos "
