--- a/c-api/method.po
+++ b/c-api/method.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 02:17+0200\n"
+"PO-Revision-Date: 2021-08-01 20:26+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/method.rst:6
 msgid "Instance Method Objects"
@@ -44,14 +45,14 @@ msgstr ""
 "instancia de Python. No está expuesto a los programas de Python."
 
 #: ../Doc/c-api/method.rst:23
-#, fuzzy
 msgid ""
 "Return true if *o* is an instance method object (has type :c:data:"
 "`PyInstanceMethod_Type`).  The parameter must not be ``NULL``. This function "
 "always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es un objeto de método de instancia (tiene tipo :c:"
-"data:`PyInstanceMethod_Type`). El parámetro no debe ser ``NULL``."
+"data:`PyInstanceMethod_Type`). El parámetro no debe ser ``NULL``. Esta "
+"función siempre tiene éxito."
 
 #: ../Doc/c-api/method.rst:30
 msgid ""
@@ -100,13 +101,13 @@ msgstr ""
 "MethodType``."
 
 #: ../Doc/c-api/method.rst:67
-#, fuzzy
 msgid ""
 "Return true if *o* is a method object (has type :c:data:`PyMethod_Type`).  "
 "The parameter must not be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *o* es un objeto de método (tiene tipo :c:data:"
-"`PyMethod_Type`). El parámetro no debe ser ``NULL``."
+"`PyMethod_Type`). El parámetro no debe ser ``NULL``. Esta función siempre "
+"tiene éxito."
 
 #: ../Doc/c-api/method.rst:73
 msgid ""
