--- a/c-api/module.po
+++ b/c-api/module.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-08 00:01+0200\n"
+"PO-Revision-Date: 2021-08-02 01:21+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/module.rst:6
 msgid "Module Objects"
@@ -35,22 +36,20 @@ msgstr ""
 "ModuleType``."
 
 #: ../Doc/c-api/module.rst:21
-#, fuzzy
 msgid ""
 "Return true if *p* is a module object, or a subtype of a module object. This "
 "function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto de módulo o un subtipo de un objeto de "
-"módulo."
+"módulo. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/module.rst:27
-#, fuzzy
 msgid ""
 "Return true if *p* is a module object, but not a subtype of :c:data:"
 "`PyModule_Type`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto módulo, pero no un subtipo de :c:data:"
-"`PyModule_Type`."
+"`PyModule_Type`. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/module.rst:40
 msgid ""
@@ -298,6 +297,8 @@ msgid ""
 "A traversal function to call during GC traversal of the module object, or "
 "``NULL`` if not needed."
 msgstr ""
+"Una función transversal para llamar durante el recorrido GC del objeto del "
+"módulo, o ``NULL`` si no es necesario."
 
 #: ../Doc/c-api/module.rst:202 ../Doc/c-api/module.rst:217
 #: ../Doc/c-api/module.rst:232
@@ -309,23 +310,33 @@ msgid ""
 "0 and the module state (as returned by :c:func:`PyModule_GetState`) is "
 "``NULL``."
 msgstr ""
+"Esta función no se llama si se solicitó el estado del módulo pero aún no se "
+"asignó. Este es el caso inmediatamente después de que se crea el módulo y "
+"antes de que se ejecute (la función :c:data:`Py_mod_exec`). Más "
+"precisamente, esta función no se llama si :c:member:`m_size` es mayor que 0 "
+"y el estado del módulo (como lo retorna :c:func:`PyModule_GetState`) es "
+"``NULL``."
 
 #: ../Doc/c-api/module.rst:209 ../Doc/c-api/module.rst:224
 #: ../Doc/c-api/module.rst:239
 msgid "No longer called before the module state is allocated."
-msgstr ""
+msgstr "Ya no se llama antes de que se asigne el estado del módulo."
 
 #: ../Doc/c-api/module.rst:214
 msgid ""
 "A clear function to call during GC clearing of the module object, or "
 "``NULL`` if not needed."
 msgstr ""
+"Una función clara para llamar durante la limpieza GC del objeto del módulo, "
+"o ``NULL`` si no es necesario."
 
 #: ../Doc/c-api/module.rst:229
 msgid ""
 "A function to call during deallocation of the module object, or ``NULL`` if "
 "not needed."
 msgstr ""
+"Una función para llamar durante la desasignación del objeto del módulo, o "
+"``NULL`` si no es necesario."
 
 #: ../Doc/c-api/module.rst:243
 msgid "Single-phase initialization"
@@ -681,7 +692,6 @@ msgstr ""
 "funciones para ayudar a inicializar el estado del módulo:"
 
 #: ../Doc/c-api/module.rst:443
-#, fuzzy
 msgid ""
 "Add an object to *module* as *name*.  This is a convenience function which "
 "can be used from the module's initialization function.  This steals a "
@@ -754,6 +764,10 @@ msgid ""
 "the last component of :c:member:`~PyTypeObject.tp_name` after dot. Return "
 "``-1`` on error, ``0`` on success."
 msgstr ""
+"Agrega un objeto tipo a *module*. El objeto tipo se finaliza llamando "
+"internamente :c:func:`PyType_Ready`. El nombre del objeto tipo se toma del "
+"último componente de :c:member:`~PyTypeObject.tp_name` después del punto. "
+"Retorna ``-1`` en caso de error, ``0`` en caso de éxito."
 
 #: ../Doc/c-api/module.rst:500
 msgid "Module lookup"
@@ -828,7 +842,7 @@ msgstr ""
 
 #: ../Doc/c-api/module.rst:531 ../Doc/c-api/module.rst:542
 msgid "The caller must hold the GIL."
-msgstr ""
+msgstr "La persona que llama debe retener el GIL."
 
 #: ../Doc/c-api/module.rst:533
 msgid "Return 0 on success or -1 on failure."
