--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -6,19 +6,21 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-08-02 01:55+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Language: es\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/structures.rst:6
 msgid "Common Object Structures"
@@ -36,7 +38,7 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:14
 msgid "Base object types and macros"
-msgstr ""
+msgstr "Tipos objeto base y macros"
 
 #: ../Doc/c-api/structures.rst:16
 msgid ""
@@ -126,10 +128,12 @@ msgid ""
 "Return non-zero if the object *o* type is *type*. Return zero otherwise. "
 "Equivalent to: ``Py_TYPE(o) == type``."
 msgstr ""
+"Retorna un valor distinto de cero si el objeto *o* tipo es *type*. Retorna "
+"cero en caso contrario. Equivalente a: ``Py_TYPE(o) == type``."
 
 #: ../Doc/c-api/structures.rst:83
 msgid "Set the object *o* type to *type*."
-msgstr ""
+msgstr "Establece el tipo del objeto *o* a *type*."
 
 #: ../Doc/c-api/structures.rst:90
 msgid ""
@@ -141,7 +145,7 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:99
 msgid "Set the object *o* reference counter to *refcnt*."
-msgstr ""
+msgstr "Establece el conteo de referencia del objeto *o* a *refcnt*."
 
 #: ../Doc/c-api/structures.rst:106
 msgid ""
@@ -153,7 +157,7 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:114
 msgid "Set the object *o* size to *size*."
-msgstr ""
+msgstr "Establece el tamaño del objeto *o* a *size*."
 
 #: ../Doc/c-api/structures.rst:121
 msgid ""
@@ -175,10 +179,9 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:139
 msgid "Implementing functions and methods"
-msgstr ""
+msgstr "Implementando funciones y métodos"
 
 #: ../Doc/c-api/structures.rst:143
-#, fuzzy
 msgid ""
 "Type of the functions used to implement most Python callables in C. "
 "Functions of this type take two :c:type:`PyObject*` parameters and return "
@@ -188,52 +191,51 @@ msgid ""
 "reference."
 msgstr ""
 "Tipo de las funciones usadas para implementar la mayoría de invocables "
-"Python en C. Funciones de este tipo toman dos parámetros :c:type:`PyObject"
-"\\*` y retorna un valor de ese tipo. Si el valor de retorno es ``NULL``, una "
+"Python en C. Funciones de este tipo toman dos parámetros :c:type:`PyObject*` "
+"y retorna un valor de ese tipo. Si el valor de retorno es ``NULL``, una "
 "excepción fue establecida. Si no es ``NULL``, el valor retornado se "
 "interpreta como el valor de retorno de la función que se expone en Python. "
 "La función debe retornar una nueva referencia."
 
 #: ../Doc/c-api/structures.rst:150
 msgid "The function signature is::"
-msgstr ""
+msgstr "La firma de la función es::"
 
 #: ../Doc/c-api/structures.rst:157
-#, fuzzy
 msgid ""
 "Type of the functions used to implement Python callables in C with "
 "signature :const:`METH_VARARGS | METH_KEYWORDS`. The function signature is::"
 msgstr ""
 "Tipo de las funciones que se utilizan para implementar invocables Python en "
-"C con la firma :const:`METH_FASTCALL`."
+"C con la firma :const:`METH_VARARGS | METH_KEYWORDS`. La firma de la función "
+"es::"
 
 #: ../Doc/c-api/structures.rst:168
-#, fuzzy
 msgid ""
 "Type of the functions used to implement Python callables in C with "
 "signature :const:`METH_FASTCALL`. The function signature is::"
 msgstr ""
 "Tipo de las funciones que se utilizan para implementar invocables Python en "
-"C con la firma :const:`METH_FASTCALL`."
+"C con la firma :const:`METH_FASTCALL`. La firma de la función es::"
 
 #: ../Doc/c-api/structures.rst:178
-#, fuzzy
 msgid ""
 "Type of the functions used to implement Python callables in C with "
 "signature :const:`METH_FASTCALL | METH_KEYWORDS`. The function signature is::"
 msgstr ""
 "Tipo de las funciones que se utilizan para implementar invocables Python en "
-"C con la firma :const:`METH_FASTCALL`."
+"C con la firma :const:`METH_FASTCALL | METH_KEYWORDS`. La firma de la "
+"función es::"
 
 #: ../Doc/c-api/structures.rst:189
-#, fuzzy
 msgid ""
 "Type of the functions used to implement Python callables in C with "
 "signature :const:`METH_METHOD | METH_FASTCALL | METH_KEYWORDS`. The function "
 "signature is::"
 msgstr ""
 "Tipo de las funciones que se utilizan para implementar invocables Python en "
-"C con la firma :const:`METH_FASTCALL`."
+"C con la firma :const:`METH_METHOD | METH_FASTCALL | METH_KEYWORDS`. La "
+"firma de la función es::"
 
 #: ../Doc/c-api/structures.rst:204
 msgid ""
@@ -307,7 +309,6 @@ msgid "points to the contents of the docstring"
 msgstr "puntos a los contenidos del docstring"
 
 #: ../Doc/c-api/structures.rst:222
-#, fuzzy
 msgid ""
 "The :attr:`ml_meth` is a C function pointer.  The functions may be of "
 "different types, but they always return :c:type:`PyObject*`.  If the "
@@ -317,10 +318,10 @@ msgid ""
 "implementation uses the specific C type of the *self* object."
 msgstr ""
 "El :attr:`ml_meth` es un puntero de función C. Las funciones pueden ser de "
-"diferentes tipos, pero siempre retornan :c:type:`PyObject\\*`. Si la función "
+"diferentes tipos, pero siempre retornan :c:type:`PyObject*`. Si la función "
 "no es la de :c:type:`PyCFunction`, el compilador requiere una conversión de "
 "tipo en la tabla de métodos. A pesar de que :c:type:`PyCFunction` define el "
-"primer parámetro como :c:type:`PyObject\\*`, es común que la implementación "
+"primer parámetro como :c:type:`PyObject*`, es común que la implementación "
 "del método utiliza el tipo específico C del objecto *self*."
 
 #: ../Doc/c-api/structures.rst:229
@@ -335,10 +336,9 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:233
 msgid "There are these calling conventions:"
-msgstr ""
+msgstr "Existen estas convenciones de llamada:"
 
 #: ../Doc/c-api/structures.rst:237
-#, fuzzy
 msgid ""
 "This is the typical calling convention, where the methods have the type :c:"
 "type:`PyCFunction`. The function expects two :c:type:`PyObject*` values. The "
@@ -348,7 +348,7 @@ msgid ""
 "func:`PyArg_ParseTuple` or :c:func:`PyArg_UnpackTuple`."
 msgstr ""
 "Esta es la convención de llamada típica, donde los métodos tienen el tipo :c:"
-"type:`PyCFunction`. La función espera dos valores :c:type:`PyObject\\*`.  El "
+"type:`PyCFunction`. La función espera dos valores :c:type:`PyObject*`.  El "
 "primero es objeto *self* para los métodos; para las funciones del módulo, "
 "que es el objeto módulo. El segundo parámetro (a menudo llamado *args*) es "
 "un objeto tupla que representa todos los argumentos. Este parámetro se "
@@ -371,7 +371,6 @@ msgstr ""
 "`PyArg_ParseTupleAndKeywords`."
 
 #: ../Doc/c-api/structures.rst:256
-#, fuzzy
 msgid ""
 "Fast calling convention supporting only positional arguments. The methods "
 "have the type :c:type:`_PyCFunctionFast`. The first parameter is *self*, the "
@@ -381,16 +380,15 @@ msgid ""
 msgstr ""
 "Convención de llamando rápido que soporta sólo argumentos posicionales. Los "
 "métodos tienen el tipo :c:type:`_PyCFunctionFast`. El primer parámetro es "
-"*self*, el segundo parámetro es un arreglo C de valores :c:type:`PyObject"
-"\\*` que indican los argumentos y el tercer parámetro es el número de "
-"argumentos (la longitud del arreglo)."
+"*self*, el segundo parámetro es un arreglo C de valores :c:type:`PyObject*` "
+"que indican los argumentos y el tercer parámetro es el número de argumentos "
+"(la longitud del arreglo)."
 
 #: ../Doc/c-api/structures.rst:262 ../Doc/c-api/structures.rst:279
 msgid "This is not part of the :ref:`limited API <stable>`."
 msgstr "Esto no es parte de la :ref:`API limitada <stable>`."
 
 #: ../Doc/c-api/structures.rst:269
-#, fuzzy
 msgid ""
 "Extension of :const:`METH_FASTCALL` supporting also keyword arguments, with "
 "methods of type :c:type:`_PyCFunctionFastWithKeywords`. Keyword arguments "
@@ -403,12 +401,12 @@ msgid ""
 msgstr ""
 "Extensión de :const:`METH_FASTCALL` que apoya también argumentos de palabra "
 "clave, con los métodos de tipo :c:type:`_PyCFunctionFastWithKeywords`. "
-"argumentos de palabra clave se transmiten de la misma manera como en el "
-"protocolo vectorcall: hay un adicional cuarta :c:type:`PyObject\\*` "
-"parámetro que es una tupla que representa los nombres de los argumentos de "
-"palabra clave o posiblemente ``NULL`` si no hay palabras clave. Los valores "
-"de los argumentos de palabras clave se almacenan en el arreglo *args*, "
-"después de los argumentos posicionales."
+"argumentos de palabra clave se transmiten de la misma manera como en el  :"
+"ref:`vectorcall protocol <vectorcall>`: hay un adicional cuarta :c:type:"
+"`PyObject*` parámetro que es una tupla que representa los nombres de los "
+"argumentos de palabra clave o posiblemente ``NULL`` si no hay palabras "
+"clave. Los valores de los argumentos de palabras clave se almacenan en el "
+"arreglo *args*, después de los argumentos posicionales."
 
 #: ../Doc/c-api/structures.rst:286
 msgid ""
@@ -416,6 +414,9 @@ msgid ""
 "class*, that is, the class that contains the method in question. The "
 "defining class might be a superclass of ``Py_TYPE(self)``."
 msgstr ""
+"Extensión de :const:`METH_FASTCALL | METH_KEYWORDS` que admite la *clase "
+"definitoria*, es decir, la clase que contiene el método en cuestión. La "
+"clase definitoria podría ser una superclase de ``Py_TYPE(self)``."
 
 #: ../Doc/c-api/structures.rst:290
 msgid ""
@@ -423,6 +424,9 @@ msgid ""
 "``METH_FASTCALL | METH_KEYWORDS`` with ``defining_class`` argument added "
 "after ``self``."
 msgstr ""
+"El método debe ser de tipo :c:type:`PyCMethod`, lo mismo que para "
+"``METH_FASTCALL | METH_KEYWORDS`` con el argumento ``defining_clase`` "
+"añadido después de ``self``."
 
 #: ../Doc/c-api/structures.rst:299
 msgid ""
@@ -439,7 +443,6 @@ msgstr ""
 "todos los casos el segundo parámetro será ``NULL``."
 
 #: ../Doc/c-api/structures.rst:308
-#, fuzzy
 msgid ""
 "Methods with a single object argument can be listed with the :const:`METH_O` "
 "flag, instead of invoking :c:func:`PyArg_ParseTuple` with a ``\"O\"`` "
@@ -447,11 +450,10 @@ msgid ""
 "parameter, and a :c:type:`PyObject*` parameter representing the single "
 "argument."
 msgstr ""
-"Los métodos con un solo argumento objeto pueden ser listados con el *flag* :"
+"Los métodos con un solo argumento objeto pueden ser listados con el flag :"
 "const:`METH_O`, en lugar de invocar :c:func:`PyArg_ParseTuple` con un "
 "argumento ``\"O\"``. Tienen el tipo :c:type:`PyCFunction`, con el parámetro "
-"*self*, y un parámetro :c:type:`PyObject\\*` que representa el único "
-"argumento."
+"*self*, y un parámetro :c:type:`PyObject*` que representa el único argumento."
 
 #: ../Doc/c-api/structures.rst:314
 msgid ""
@@ -519,7 +521,7 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:356
 msgid "Accessing attributes of extension types"
-msgstr ""
+msgstr "Acceder a atributos de tipos de extensión"
 
 #: ../Doc/c-api/structures.rst:360
 msgid ""
@@ -585,11 +587,11 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:388
 msgid "Macro name"
-msgstr "nombre de la macro"
+msgstr "Nombre de la macro"
 
 #: ../Doc/c-api/structures.rst:388
 msgid "C type"
-msgstr "tipo C"
+msgstr "Tipo C"
 
 #: ../Doc/c-api/structures.rst:390
 msgid "T_SHORT"
@@ -752,6 +754,13 @@ msgid ""
 "tp_vectorcall_offset` in type objects. These must be defined with "
 "``T_PYSSIZET`` and ``READONLY``, for example::"
 msgstr ""
+"Los tipos asignados al heap (creados usando :c:func:`PyType_FromSpec` o "
+"similar), ``PyMemberDef`` pueden contener definiciones para los miembros "
+"especiales ``__dictoffset__``, ``__weaklistoffset__`` y "
+"``__vectorcalloffset__``, correspondientes a :c:member:`~PyTypeObject."
+"tp_dictoffset`, :c:member:`~PyTypeObject.tp_weaklistoffset` y :c:member:"
+"`~PyTypeObject.tp_vectorcall_offset` en objetos de tipo. Estos deben "
+"definirse con ``T_PYSSIZET`` y ``READONLY``, por ejemplo:"
 
 #: ../Doc/c-api/structures.rst:441
 msgid ""
@@ -767,7 +776,7 @@ msgstr "nombre"
 
 #: ../Doc/c-api/structures.rst:447
 msgid "attribute name"
-msgstr "Nombre del Atributo"
+msgstr "nombre del atributo"
 
 #: ../Doc/c-api/structures.rst:449
 msgid "get"
@@ -821,13 +830,12 @@ msgstr ""
 "*setter*"
 
 #: ../Doc/c-api/structures.rst:462
-#, fuzzy
 msgid ""
 "The ``get`` function takes one :c:type:`PyObject*` parameter (the instance) "
 "and a function pointer (the associated ``closure``)::"
 msgstr ""
-"La función ``get`` toma un parámetro :c:type:`PyObject\\*` (la instancia) y "
-"un puntero de función (el ``closure`` asociado)::"
+"La función ``get`` toma un parámetro :c:type:`PyObject*` (la instancia) y un "
+"puntero de función (el ``closure`` asociado)::"
 
 #: ../Doc/c-api/structures.rst:467
 msgid ""
@@ -838,14 +846,13 @@ msgstr ""
 "excepción establecida en caso de error."
 
 #: ../Doc/c-api/structures.rst:470
-#, fuzzy
 msgid ""
 "``set`` functions take two :c:type:`PyObject*` parameters (the instance and "
 "the value to be set) and a function pointer (the associated ``closure``)::"
 msgstr ""
-"Las funciones ``set`` toman dos parámetros :c:type:`PyObject\\*` (la "
-"instancia y el valor a ser establecido) y un puntero de función (el "
-"``closure`` asociado)::"
+"Las funciones ``set`` toman dos parámetros :c:type:`PyObject*` (la instancia "
+"y el valor a ser establecido) y un puntero de función (el ``closure`` "
+"asociado)::"
 
 #: ../Doc/c-api/structures.rst:475
 msgid ""
