--- a/c-api/veryhigh.po
+++ b/c-api/veryhigh.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-08 00:54+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-01 17:38+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/veryhigh.rst:8
 msgid "The Very High Level Layer"
@@ -48,7 +49,6 @@ msgstr ""
 "siguiendo las funciones que los aceptan como parámetros."
 
 #: ../Doc/c-api/veryhigh.rst:19
-#, fuzzy
 msgid ""
 "Note also that several of these functions take :c:type:`FILE*` parameters.  "
 "One particular issue which needs to be handled carefully is that the :c:type:"
@@ -214,7 +214,6 @@ msgstr ""
 "PyRun_SimpleFileExFlags retorne."
 
 #: ../Doc/c-api/veryhigh.rst:120
-#, fuzzy
 msgid ""
 "On Windows, *fp* should be opened as binary mode (e.g. ``fopen(filename, \"rb"
 "\")``). Otherwise, Python may not handle script file with LF line ending "
