--- a/c-api/datetime.po
+++ b/c-api/datetime.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-17 20:20+0200\n"
+"PO-Revision-Date: 2021-08-01 20:34+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/datetime.rst:6
 msgid "DateTime Objects"
@@ -61,99 +62,94 @@ msgid "Type-check macros:"
 msgstr "Macros de verificación de tipo:"
 
 #: ../Doc/c-api/datetime.rst:30
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DateType` or a subtype "
 "of :c:data:`PyDateTime_DateType`.  *ob* must not be ``NULL``.  This function "
 "always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateType` o un "
-"subtipo de :c:data:`PyDateTime_DateType`. *ob* no debe ser ``NULL``."
+"subtipo de :c:data:`PyDateTime_DateType`. *ob* no debe ser ``NULL``. Esta "
+"función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:37
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DateType`. *ob* must not "
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateType`. *ob* no "
-"debe ser ``NULL``."
+"debe ser ``NULL``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:43
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DateTimeType` or a "
 "subtype of :c:data:`PyDateTime_DateTimeType`.  *ob* must not be ``NULL``.  "
 "This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateTimeType` o un "
-"subtipo de :c:data:`PyDateTime_DateTimeType`. *ob* no debe ser ``NULL``."
+"subtipo de :c:data:`PyDateTime_DateTimeType`. *ob* no debe ser ``NULL``. "
+"Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:50
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DateTimeType`. *ob* must "
 "not be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DateTimeType`. *ob* "
-"no debe ser ``NULL``."
+"no debe ser ``NULL``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:56
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_TimeType` or a subtype "
 "of :c:data:`PyDateTime_TimeType`.  *ob* must not be ``NULL``.  This function "
 "always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TimeType` o un "
-"subtipo de :c:data:`PyDateTime_TimeType`. *ob* no debe ser ``NULL``."
+"subtipo de :c:data:`PyDateTime_TimeType`. *ob* no debe ser ``NULL``. Esta "
+"función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:63
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_TimeType`. *ob* must not "
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TimeType`. *ob* no "
-"debe ser ``NULL``."
+"debe ser ``NULL``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:69
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DeltaType` or a subtype "
 "of :c:data:`PyDateTime_DeltaType`.  *ob* must not be ``NULL``.  This "
 "function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DeltaType` o un "
-"subtipo de :c:data:`PyDateTime_DeltaType`. *ob* no debe ser ``NULL``."
+"subtipo de :c:data:`PyDateTime_DeltaType`. *ob* no debe ser ``NULL``. Esta "
+"función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:76
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_DeltaType`. *ob* must not "
 "be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_DeltaType`. *ob* no "
-"debe ser ``NULL``."
+"debe ser ``NULL``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:82
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_TZInfoType` or a subtype "
 "of :c:data:`PyDateTime_TZInfoType`.  *ob* must not be ``NULL``.  This "
 "function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TZInfoType` o un "
-"subtipo de :c:data:`PyDateTime_TZInfoType`.  *ob* no debe ser ``NULL``."
+"subtipo de :c:data:`PyDateTime_TZInfoType`.  *ob* no debe ser ``NULL``. Esta "
+"función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:89
-#, fuzzy
 msgid ""
 "Return true if *ob* is of type :c:data:`PyDateTime_TZInfoType`. *ob* must "
 "not be ``NULL``.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *ob* es de tipo :c:data:`PyDateTime_TZInfoType`. *ob* "
-"no debe ser ``NULL``."
+"no debe ser ``NULL``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/datetime.rst:93
 msgid "Macros to create objects:"
