--- a/c-api/dict.po
+++ b/c-api/dict.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-17 19:53+0200\n"
+"PO-Revision-Date: 2021-08-01 20:34+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/dict.rst:6
 msgid "Dictionary Objects"
@@ -41,22 +42,20 @@ msgstr ""
 "Python. Este es el mismo objeto que :class:`dict` en la capa de Python."
 
 #: ../Doc/c-api/dict.rst:24
-#, fuzzy
 msgid ""
 "Return true if *p* is a dict object or an instance of a subtype of the dict "
 "type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto ``dict`` o una instancia de un subtipo "
-"del tipo ``dict``."
+"del tipo ``dict``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/dict.rst:30
-#, fuzzy
 msgid ""
 "Return true if *p* is a dict object, but not an instance of a subtype of the "
 "dict type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto ``dict``, pero no una instancia de un "
-"subtipo del tipo ``dict``."
+"subtipo del tipo ``dict``. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/dict.rst:36
 msgid "Return a new empty dictionary, or ``NULL`` on failure."
@@ -108,7 +107,6 @@ msgstr ""
 "referencia a *val*."
 
 #: ../Doc/c-api/dict.rst:75
-#, fuzzy
 msgid ""
 "Insert *val* into the dictionary *p* using *key* as a key. *key* should be "
 "a :c:type:`const char*`.  The key object is created using "
@@ -116,31 +114,31 @@ msgid ""
 "failure.  This function *does not* steal a reference to *val*."
 msgstr ""
 "Inserta *val* en el diccionario *p* usando *key* como clave. *key* debe ser "
-"un :c:type:`const char\\*`. El objeto clave se crea usando "
+"un :c:type:`const char*`. El objeto clave se crea usando "
 "``PyUnicode_FromString(key)``. Retorna ``0`` en caso de éxito o ``-1`` en "
 "caso de error. Esta función *no* roba una referencia a *val*."
 
 #: ../Doc/c-api/dict.rst:83
-#, fuzzy
 msgid ""
 "Remove the entry in dictionary *p* with key *key*. *key* must be hashable; "
 "if it isn't, :exc:`TypeError` is raised. If *key* is not in the dictionary, :"
 "exc:`KeyError` is raised. Return ``0`` on success or ``-1`` on failure."
 msgstr ""
 "Elimina la entrada en el diccionario *p* con la clave *key*. *key* debe ser "
-"*hashable*; si no lo está, :exc:`TypeError` se lanza. Retorna ``0`` en caso "
-"de éxito o ``-1`` en caso de error."
+"*hashable*; si no lo es, se lanza :exc:`TypeError`. Si *key* no está en el "
+"diccionario, se lanza :exc:`KeyError`. Retorna ``0`` en caso de éxito o "
+"``-1`` en caso de error."
 
 #: ../Doc/c-api/dict.rst:91
-#, fuzzy
 msgid ""
 "Remove the entry in dictionary *p* which has a key specified by the string "
 "*key*. If *key* is not in the dictionary, :exc:`KeyError` is raised. Return "
 "``0`` on success or ``-1`` on failure."
 msgstr ""
 "Elimina la entrada en el diccionario *p* que tiene una clave especificada "
-"por la cadena de caracteres *key*. Retorna ``0`` en caso de éxito o ``-1`` "
-"en caso de error."
+"por la cadena de caracteres *key*. Si *key* no está en el diccionario, se "
+"lanza :exc:`KeyError`. Retorna ``0`` en caso de éxito o ``-1`` en caso de "
+"error."
 
 #: ../Doc/c-api/dict.rst:98
 msgid ""
@@ -172,13 +170,12 @@ msgstr ""
 "presente."
 
 #: ../Doc/c-api/dict.rst:116
-#, fuzzy
 msgid ""
 "This is the same as :c:func:`PyDict_GetItem`, but *key* is specified as a :c:"
 "type:`const char*`, rather than a :c:type:`PyObject*`."
 msgstr ""
 "Esto es lo mismo que :c:func:`PyDict_GetItem`, pero *key* se especifica como "
-"un :c:type:`const char\\*`, en lugar de un :c:type:`PyObject\\*`."
+"un :c:type:`const char*`, en lugar de un :c:type:`PyObject*`."
 
 #: ../Doc/c-api/dict.rst:119
 msgid ""
@@ -238,7 +235,6 @@ msgstr ""
 "``len(p)`` en un diccionario."
 
 #: ../Doc/c-api/dict.rst:161
-#, fuzzy
 msgid ""
 "Iterate over all key-value pairs in the dictionary *p*.  The :c:type:"
 "`Py_ssize_t` referred to by *ppos* must be initialized to ``0`` prior to the "
@@ -257,11 +253,11 @@ msgstr ""
 "verdadero para cada par en el diccionario y falso una vez que todos los "
 "pares han sido reportados. Los parámetros *pkey* y *pvalue* deben apuntar a :"
 "c:type:`PyObject\\*` variables que se completarán con cada clave y valor, "
-"respectivamente, o pueden ser ``NULL``. Cualquier referencia retornada a "
-"través de ellos es prestada. *ppos* no debe modificarse durante la "
-"iteración. Su valor representa desplazamientos dentro de la estructura "
-"interna del diccionario, y dado que la estructura es escasa, los "
-"desplazamientos no son consecutivos."
+"respectivamente, o pueden ser ``NULL``. Todas las referencias devueltas a "
+"través de ellos se toman prestadas. *ppos* no debe modificarse durante la "
+"iteración. Su valor representa compensaciones dentro de la estructura del "
+"diccionario interno y, dado que la estructura es escasa, las compensaciones "
+"no son consecutivas."
 
 #: ../Doc/c-api/dict.rst:172
 msgid "For example::"
