--- a/c-api/file.po
+++ b/c-api/file.po
@@ -11,22 +11,22 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 20:52+0200\n"
+"PO-Revision-Date: 2021-08-01 20:12+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/file.rst:6
 msgid "File Objects"
 msgstr "Objetos archivo"
 
 #: ../Doc/c-api/file.rst:10
-#, fuzzy
 msgid ""
 "These APIs are a minimal emulation of the Python 2 C API for built-in file "
 "objects, which used to rely on the buffered I/O (:c:type:`FILE*`) support "
@@ -173,6 +173,8 @@ msgid ""
 "Raises an :ref:`auditing event <auditing>` ``setopencodehook`` with no "
 "arguments."
 msgstr ""
+"Genera un :ref:`evento de auditoría <auditing>` ``setopencodehook`` sin "
+"argumentos."
 
 #: ../Doc/c-api/file.rst:95
 msgid ""
