--- a/c-api/gcsupport.po
+++ b/c-api/gcsupport.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-16 21:14+0200\n"
+"PO-Revision-Date: 2021-08-02 01:45+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/gcsupport.rst:6
 msgid "Supporting Cyclic Garbage Collection"
@@ -132,32 +133,40 @@ msgid ""
 "Returns non-zero if the object implements the garbage collector protocol, "
 "otherwise returns 0."
 msgstr ""
+"Retorna un valor distinto de cero si el objeto implementa el protocolo del "
+"recolector de basura; de lo contrario, retorna 0."
 
 #: ../Doc/c-api/gcsupport.rst:69
 msgid ""
 "The object cannot be tracked by the garbage collector if this function "
 "returns 0."
 msgstr ""
+"El recolector de basura no puede rastrear el objeto si esta función retorna "
+"0."
 
 #: ../Doc/c-api/gcsupport.rst:74
 msgid ""
 "Returns 1 if the object type of *op* implements the GC protocol and *op* is "
 "being currently tracked by the garbage collector and 0 otherwise."
 msgstr ""
+"Retorna 1 si el tipo de objeto de *op* implementa el protocolo GC y el "
+"recolector de basura está rastreando *op* y 0 en caso contrario."
 
 #: ../Doc/c-api/gcsupport.rst:77
 msgid "This is analogous to the Python function :func:`gc.is_tracked`."
-msgstr ""
+msgstr "Esto es análogo a la función de Python :func:`gc.is_tracked`."
 
 #: ../Doc/c-api/gcsupport.rst:84
 msgid ""
 "Returns 1 if the object type of *op* implements the GC protocol and *op* has "
 "been already finalized by the garbage collector and 0 otherwise."
 msgstr ""
+"Retorna 1 si el tipo de objeto de *op* implementa el protocolo GC y *op* ya "
+"ha sido finalizado por el recolector de basura y 0 en caso contrario."
 
 #: ../Doc/c-api/gcsupport.rst:87
 msgid "This is analogous to the Python function :func:`gc.is_finalized`."
-msgstr ""
+msgstr "Esto es análogo a la función de Python :func:`gc.is_finalized`."
 
 #: ../Doc/c-api/gcsupport.rst:91
 msgid ""
