--- a/c-api/long.po
+++ b/c-api/long.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-21 22:18+0200\n"
+"PO-Revision-Date: 2021-08-02 01:24+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/long.rst:6
 msgid "Integer Objects"
@@ -56,22 +57,20 @@ msgstr ""
 "Python. Este es el mismo objeto que :class:`int` en la capa de Python."
 
 #: ../Doc/c-api/long.rst:29
-#, fuzzy
 msgid ""
 "Return true if its argument is a :c:type:`PyLongObject` or a subtype of :c:"
 "type:`PyLongObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyLongObject` o un subtipo "
-"de :c:type:`PyLongObject`."
+"de :c:type:`PyLongObject`. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/long.rst:35
-#, fuzzy
 msgid ""
 "Return true if its argument is a :c:type:`PyLongObject`, but not a subtype "
 "of :c:type:`PyLongObject`.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si su argumento es un :c:type:`PyLongObject`, pero no un "
-"subtipo de :c:type:`PyLongObject`."
+"subtipo de :c:type:`PyLongObject`. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/long.rst:41
 msgid ""
@@ -81,7 +80,6 @@ msgstr ""
 "de error."
 
 #: ../Doc/c-api/long.rst:43
-#, fuzzy
 msgid ""
 "The current implementation keeps an array of integer objects for all "
 "integers between ``-5`` and ``256``, when you create an int in that range "
@@ -89,9 +87,7 @@ msgid ""
 msgstr ""
 "La implementación actual mantiene un arreglo de objetos enteros para todos "
 "los enteros entre ``-5`` y ``256``, cuando crea un *int* en ese rango, en "
-"realidad solo obtiene una referencia al objeto existente. Por lo tanto, "
-"debería ser posible cambiar el valor de ``1``. Sospecho que el "
-"comportamiento de Python en este caso no está definido. :-)"
+"realidad solo obtiene una referencia al objeto existente."
 
 #: ../Doc/c-api/long.rst:50
 msgid ""
@@ -167,6 +163,7 @@ msgstr ""
 #: ../Doc/c-api/long.rst:99
 msgid "Convert a sequence of Unicode digits to a Python integer value."
 msgstr ""
+"Convierte una secuencia de dígitos Unicode en un valor entero de Python."
 
 #: ../Doc/c-api/long.rst:103
 msgid ""
@@ -181,6 +178,8 @@ msgid ""
 "Convert a sequence of Unicode digits in the string *u* to a Python integer "
 "value."
 msgstr ""
+"Convierte una secuencia de dígitos Unicode en la cadena de caracteres *u* en "
+"un valor entero de Python."
 
 #: ../Doc/c-api/long.rst:116
 msgid ""
@@ -262,15 +261,14 @@ msgstr ""
 "c:type:`long long`."
 
 #: ../Doc/c-api/long.rst:194
-#, fuzzy
 msgid ""
 "If the value of *obj* is greater than :const:`LLONG_MAX` or less than :const:"
 "`LLONG_MIN`, set *\\*overflow* to ``1`` or ``-1``, respectively, and return "
 "``-1``; otherwise, set *\\*overflow* to ``0``.  If any other exception "
 "occurs set *\\*overflow* to ``0`` and return ``-1`` as usual."
 msgstr ""
-"Si el valor de *obj* es mayor que :const:`LONG_MAX` o menor que :const:"
-"`LONG_MIN`, establece *\\*overflow * en ``1`` o ``-1``, respectivamente, y "
+"Si el valor de *obj* es mayor que :const:`LLONG_MAX` o menor que :const:"
+"`LLONG_MIN`, establece *\\*overflow* en ``1`` o ``-1``, respectivamente, y "
 "retorna ``-1``; de lo contrario, establece *\\*overflow* en ``0``. Si se "
 "produce alguna otra excepción, configura *\\*overflow* en ``0`` y retorna "
 "``-1`` como de costumbre."
@@ -410,13 +408,12 @@ msgstr ""
 "convertirlo en un :c:type:`PyLongObject`."
 
 #: ../Doc/c-api/long.rst:302
-#, fuzzy
 msgid ""
 "If the value of *obj* is out of range for an :c:type:`unsigned long long`, "
 "return the reduction of that value modulo ``ULLONG_MAX + 1``."
 msgstr ""
 "Si el valor de *obj* está fuera del rango para :c:type:`unsigned long long`, "
-"retorna la reducción de ese valor módulo ``PY_ULLONG_MAX + 1``."
+"retorna la reducción de ese valor módulo ``ULLONG_MAX + 1``."
 
 #: ../Doc/c-api/long.rst:305
 msgid ""
