--- a/c-api/marshal.po
+++ b/c-api/marshal.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 15:52+0200\n"
+"PO-Revision-Date: 2021-08-01 20:28+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/marshal.rst:6
 msgid "Data marshalling support"
@@ -91,15 +92,14 @@ msgstr ""
 "(*marshalled*)."
 
 #: ../Doc/c-api/marshal.rst:46
-#, fuzzy
 msgid ""
 "Return a C :c:type:`long` from the data stream in a :c:type:`FILE*` opened "
 "for reading.  Only a 32-bit value can be read in using this function, "
 "regardless of the native size of :c:type:`long`."
 msgstr ""
-"Retorna un C :c:type:`long` del flujo de datos en un :c:type:`FILE\\*` "
-"abierto para lectura. Solo se puede leer un valor de 32 bits con esta "
-"función, independientemente del tamaño nativo de :c:type:`long`."
+"Retorna un C :c:type:`long` del flujo de datos en un :c:type:`FILE*` abierto "
+"para lectura. Solo se puede leer un valor de 32 bits con esta función, "
+"independientemente del tamaño nativo de :c:type:`long`."
 
 #: ../Doc/c-api/marshal.rst:50 ../Doc/c-api/marshal.rst:60
 msgid ""
@@ -110,23 +110,21 @@ msgstr ""
 "retorna ``-1``."
 
 #: ../Doc/c-api/marshal.rst:56
-#, fuzzy
 msgid ""
 "Return a C :c:type:`short` from the data stream in a :c:type:`FILE*` opened "
 "for reading.  Only a 16-bit value can be read in using this function, "
 "regardless of the native size of :c:type:`short`."
 msgstr ""
-"Retorna un C :c:type:`short` desde el flujo de datos en un :c:type:`FILE\\*` "
+"Retorna un C :c:type:`short` desde el flujo de datos en un :c:type:`FILE*` "
 "abierto para lectura. Solo se puede leer un valor de 16 bits con esta "
 "función, independientemente del tamaño nativo de :c:type:`short`."
 
 #: ../Doc/c-api/marshal.rst:66
-#, fuzzy
 msgid ""
 "Return a Python object from the data stream in a :c:type:`FILE*` opened for "
 "reading."
 msgstr ""
-"Retorna un objeto Python del flujo de datos en un :c:type:`FILE\\*` abierto "
+"Retorna un objeto Python del flujo de datos en un :c:type:`FILE*` abierto "
 "para lectura."
 
 #: ../Doc/c-api/marshal.rst:69 ../Doc/c-api/marshal.rst:83
@@ -139,7 +137,6 @@ msgstr ""
 "`ValueError` o :exc:`TypeError`) y retorna ``NULL``."
 
 #: ../Doc/c-api/marshal.rst:75
-#, fuzzy
 msgid ""
 "Return a Python object from the data stream in a :c:type:`FILE*` opened for "
 "reading.  Unlike :c:func:`PyMarshal_ReadObjectFromFile`, this function "
@@ -149,7 +146,7 @@ msgid ""
 "file.  Only use these variant if you are certain that you won't be reading "
 "anything else from the file."
 msgstr ""
-"Retorna un objeto Python del flujo de datos en un :c:type:`FILE\\*` abierto "
+"Retorna un objeto Python del flujo de datos en un :c:type:`FILE*` abierto "
 "para lectura. A diferencia de :c:func:`PyMarshal_ReadObjectFromFile`, esta "
 "función asume que no se leerán más objetos del archivo, lo que le permite "
 "cargar agresivamente los datos del archivo en la memoria para que la "
