--- a/c-api/memoryview.po
+++ b/c-api/memoryview.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-10 00:37+0200\n"
+"PO-Revision-Date: 2021-08-01 20:28+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/memoryview.rst:9
 msgid "MemoryView objects"
@@ -81,18 +82,17 @@ msgstr ""
 "realiza una copia y la vista de memoria apunta a un nuevo objeto de bytes."
 
 #: ../Doc/c-api/memoryview.rst:47
-#, fuzzy
 msgid ""
 "Return true if the object *obj* is a memoryview object.  It is not currently "
 "allowed to create subclasses of :class:`memoryview`.  This function always "
 "succeeds."
 msgstr ""
 "Retorna verdadero si el objeto *obj* es un objeto de vista de memoria. "
-"Actualmente no está permitido crear subclases de :class:`memoryview`."
+"Actualmente no está permitido crear subclases de :class:`memoryview`. Esta "
+"función siempre tiene éxito."
 
 # crashes -> bloquearse
 #: ../Doc/c-api/memoryview.rst:54
-#, fuzzy
 msgid ""
 "Return a pointer to the memoryview's private copy of the exporter's buffer. "
 "*mview* **must** be a memoryview instance; this macro doesn't check its "
@@ -100,8 +100,7 @@ msgid ""
 msgstr ""
 "Retorna un puntero a la copia privada de la vista de memoria del búfer del "
 "exportador. *mview* **debe** ser una instancia de *memoryview*; este macro "
-"no verifica su tipo, debe hacerlo usted mismo o correrá el riesgo de "
-"bloquearse."
+"no verifica su tipo, debe hacerlo usted mismo o correrá el riesgo de fallas."
 
 #: ../Doc/c-api/memoryview.rst:60
 msgid ""
