--- a/c-api/set.po
+++ b/c-api/set.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-16 18:25+0200\n"
+"PO-Revision-Date: 2021-08-01 20:10+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/set.rst:6
 msgid "Set Objects"
@@ -96,49 +97,45 @@ msgstr ""
 "funcionan con cualquier objeto Python iterable."
 
 #: ../Doc/c-api/set.rst:55
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`set` object or an instance of a subtype. "
 "This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set` o una instancia de un "
-"subtipo."
+"subtipo. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/set.rst:60
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`frozenset` object or an instance of a "
 "subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`frozenset` o una instancia de "
-"un subtipo."
+"un subtipo. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/set.rst:65
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`set` object, a :class:`frozenset` object, or "
 "an instance of a subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set`, un objeto :class:"
-"`frozenset`, o una instancia de un subtipo."
+"`frozenset`, o una instancia de un subtipo. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/set.rst:71
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`set` object or a :class:`frozenset` object "
 "but not an instance of a subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`set` o un objeto :class:"
-"`frozenset` pero no una instancia de un subtipo."
+"`frozenset` pero no una instancia de un subtipo. Esta función siempre tiene "
+"éxito."
 
 #: ../Doc/c-api/set.rst:77
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`frozenset` object but not an instance of a "
 "subtype.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto :class:`frozenset` pero no una "
-"instancia de un subtipo."
+"instancia de un subtipo. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/set.rst:83
 msgid ""
