--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-21 23:31+0200\n"
+"PO-Revision-Date: 2021-08-01 20:08+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/sys.rst:6
 msgid "Operating System Utilities"
@@ -664,10 +665,13 @@ msgid ""
 "automatically the name of the current function, unless the "
 "``Py_LIMITED_API`` macro is defined."
 msgstr ""
+"La función ``Py_FatalError()`` se reemplaza con una macro que registra "
+"automáticamente el nombre de la función actual, a menos que se defina la "
+"macro ``Py_LIMITED_API``."
 
 #: ../Doc/c-api/sys.rst:395
 msgid "Log the function name automatically."
-msgstr ""
+msgstr "Registra el nombre de la función automáticamente."
 
 #: ../Doc/c-api/sys.rst:405
 msgid ""
