--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-17 21:12+0200\n"
+"PO-Revision-Date: 2021-08-01 20:19+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/tuple.rst:6
 msgid "Tuple Objects"
@@ -39,22 +40,20 @@ msgstr ""
 "es el mismo objeto que :class:`tuple` en la capa de Python."
 
 #: ../Doc/c-api/tuple.rst:24
-#, fuzzy
 msgid ""
 "Return true if *p* is a tuple object or an instance of a subtype of the "
 "tuple type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto tupla o una instancia de un subtipo "
-"del tipo tupla."
+"del tipo tupla. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/tuple.rst:30
-#, fuzzy
 msgid ""
 "Return true if *p* is a tuple object, but not an instance of a subtype of "
 "the tuple type.  This function always succeeds."
 msgstr ""
 "Retorna verdadero si *p* es un objeto tupla pero no una instancia de un "
-"subtipo del tipo tupla."
+"subtipo del tipo tupla. Esta función siempre tiene éxito."
 
 #: ../Doc/c-api/tuple.rst:36
 msgid "Return a new tuple object of size *len*, or ``NULL`` on failure."
@@ -278,7 +277,6 @@ msgstr ""
 "cantidad de campos visibles para el lado de Python (si se usa como tupla)"
 
 #: ../Doc/c-api/tuple.rst:163
-#, fuzzy
 msgid ""
 "Describes a field of a struct sequence. As a struct sequence is modeled as a "
 "tuple, all fields are typed as :c:type:`PyObject*`.  The index in the :attr:"
@@ -287,7 +285,7 @@ msgid ""
 msgstr ""
 "Describe un campo de una secuencia de estructura. Como una secuencia de "
 "estructura se modela como una tupla, todos los campos se escriben como :c:"
-"type:`PyObject\\*`. El índice en el arreglo :attr:`fields` de :c:type:"
+"type:`PyObject*`. El índice en el arreglo :attr:`fields` de :c:type:"
 "`PyStructSequence_Desc` determina qué campo de la secuencia de estructura se "
 "describe."
 
@@ -310,7 +308,7 @@ msgstr "Valor especial para un nombre de campo para dejarlo sin nombre."
 
 #: ../Doc/c-api/tuple.rst:184
 msgid "The type was changed from ``char *``."
-msgstr ""
+msgstr "El tipo se cambió de ``char *``."
 
 #: ../Doc/c-api/tuple.rst:190
 msgid ""
