Arreglando fuzzy de extending

--- a/extending/newtypes_tutorial.po
+++ b/extending/newtypes_tutorial.po
@@ -620,7 +620,6 @@ msgstr ""
 "``primer`` miembro de esta manera:"
 
 #: ../Doc/extending/newtypes_tutorial.rst:415
-#, fuzzy
 msgid ""
 "But this would be risky.  Our type doesn't restrict the type of the "
 "``first`` member, so it could be any kind of object.  It could have a "
@@ -631,9 +630,9 @@ msgid ""
 msgstr ""
 "Pero esto sería arriesgado. Nuestro tipo no restringe el tipo del ``primer`` "
 "miembro, por lo que podría ser cualquier tipo de objeto. Podría tener un "
-"destructor que haga que se ejecute código que intente acceder al miembro "
-"``primer``; o ese destructor podría liberar el :term:`Global Interpreter "
-"Lock` y permite que se ejecute código arbitrario en otros hilos que acceden "
+"destructor que haga que se ejecute código que intente acceder al ``primer`` "
+"miembro; o ese destructor podría liberar el :term:`Global Interpreter Lock "
+"<GIL>` y permite que se ejecute código arbitrario en otros hilos que acceden "
 "y modifican nuestro objeto."
 
 #: ../Doc/extending/newtypes_tutorial.rst:422
