--- a/distributing/index.po
+++ b/distributing/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-08-16 20:23-0300\n"
-"Last-Translator: Federico Jurío <fdjurio@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 10:49+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distributing/index.rst:5
 msgid "Distributing Python Modules"
@@ -284,7 +285,7 @@ msgstr "`Subiendo el proyecto al Python Packaging Index`_"
 
 #: ../Doc/distributing/index.rst:131
 msgid "`The .pypirc file`_"
-msgstr ""
+msgstr "`El archivo .pypirc`_"
 
 #: ../Doc/distributing/index.rst:144
 msgid "How do I...?"
